
- Sockets extension:
  . Fixed stack buffer overflow in socket_connect(). (CVE-2011-1938)
    Found by Mateusz Kocielski, Marek Kroemeke and Filip Palian. (Felipe)
  . Changed socket_set_block() and socket_set_nonblock() so they emit warnings
    on error. (Gustavo)
  . Fixed bug #51958 (socket_accept() fails on IPv6 server sockets). (Gustavo)

- SPL extension:
  . Fixed bug #54384 (Dual iterators, GlobIterator, SplFileObject and
    SplTempFileObject crash when user-space classes don't call the paren
    constructor). (Gustavo)
  . Fixed bug #54292 (Wrong parameter causes crash in
    SplFileObject::__construct()). (Felipe)
  . Fixed bug #54291 (Crash iterating DirectoryIterator for dir name starting
    with \0). (Gustavo)
  . Fixed bug #54281 (Crash in non-initialized RecursiveIteratorIterator).
    (Felipe)

- Streams:
  . Fixed bug #54946 (stream_get_contents infinite loop). (Hannes)
  . Fixed bug #54623 (Segfault when when writing to a persistent socket after
    closing a copy of the socket). (Gustavo)
    
. Zip extension:
  . Fixed bug #54681 (addGlob() crashes on invalid flags). (Felipe)

17 Mar 2011, PHP 5.3.6
- Upgraded bundled Sqlite3 to version 3.7.4. (Ilia)
- Upgraded bundled PCRE to version 8.11. (Ilia)

- Zend Engine:
  . Indirect reference to $this fails to resolve if direct $this is never used
    in method. (Scott)
  . Added options to debug backtrace functions. (Stas)
  . Fixed bug numerous crashes due to setlocale (crash on error, pcre, mysql
    etc.) on Windows in thread safe mode. (Pierre)
  . Fixed Bug #53971 (isset() and empty() produce apparently spurious runtime
    error). (Dmitry)
  . Fixed Bug #53958 (Closures can't 'use' shared variables by value and by
    reference). (Dmitry)
  . Fixed Bug #53629 (memory leak inside highlight_string()). (Hannes, Ilia)
  . Fixed Bug #51458 (Lack of error context with nested exceptions). (Stas)
  . Fixed Bug #47143 (Throwing an exception in a destructor causes a fatal
    error). (Stas)